objects/ssot__AuthorizationApplicationAsset__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationApplicationId__c</fullName>
        <label>Authorization Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationId__c</fullName>
        <label>Authorization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Authorization Application Asset Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512782824_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplicationAsset_AssetI_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplicationAsset_AssetI_rel</relationshipLabel>
        <relationshipName>rel_1739512782824_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512788357_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuthorizationApplicationAsset_Author_rel</label>
        <referenceTo>ssot__PartyBusinessLicense__dlm</referenceTo>
        <relationshipLabel>AuthorizationApplicationAsset_Author_rel</relationshipLabel>
        <relationshipName>rel_1739512788357_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>